--- a/dart/farmtotable/frodo/pubspec.yaml
+++ b/dart/farmtotable/frodo/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.16.1
+  provider: ^4.3.2+3
 
 
   # The following adds the Cupertino Icons font to your application.
