--- a/dart/farmtotable/frodo/pubspec.yaml
+++ b/dart/farmtotable/frodo/pubspec.yaml
@@ -101,3 +101,7 @@ flutter:
         - asset: assets/fonts/Lato-Regular.ttf
         - asset: assets/fonts/Lato-Bold.ttf
           weight: 700
+    - family:  CustomIcons
+      fonts:
+        - asset: assets/fonts/CustomIcons.ttf
+
