--- a/dart/farmtotable/frodo/pubspec.yaml
+++ b/dart/farmtotable/frodo/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   intl: ^0.16.1
   provider: ^4.3.2+3
   http: ^0.12.2
+  firebase_core: ^0.7.0
+  firebase_database: ^6.0.0
+  firebase_auth: ^0.20.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
