--- a/dart/farmtotable/frodo/pubspec.yaml
+++ b/dart/farmtotable/frodo/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_core: ^0.7.0
   firebase_database: ^6.0.0
   firebase_auth: ^0.20.0+1
+  logging: ^0.11.4
 
 
   # The following adds the Cupertino Icons font to your application.
